# fg-add-resource-in-path

./: Cargo.toml  README.md
definition/: gcl.yaml
playground/config/: api.yaml
src/: lib.rs
tests/requests/hello/: api.yaml
