# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "fg_add_resource_in_path"
version = "1.0.0"
rust-version = "1.74.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "ea21d5c9-afe6-472c-a994-a0471c749549"
definition_asset_id = "fg-add-resource-in-path"
implementation_asset_id = "fg-add-resource-in-path-flex"

[dependencies]
pdk = { version = "1.0.1", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.0.1", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
